Update image paths in index.html

--- a/index.html
+++ b/index.html
@@ -6,9 +6,9 @@
 
 <body bgcolor="lightyellow">
     <center>
-        <img src="C:\HTML\image copy.png" alt="DACE" width="1300" height="150">
+        <img src="C:\HTML\html data\image copy.png" alt="DACE" width="1300" height="150">
         <hr>
-        <img src="C:\HTML\image.png" alt="Pongal" width="800" height="300">
+        <img src="C:\HTML\html data\image.png" alt="Pongal" width="800" height="300">
         <h1>🧉𝖕𝖔𝖓𝖌𝖆𝖑 𝖈𝖊𝖑𝖊𝖇𝖗𝖆𝖙𝖎𝖔𝖓🌴</h1>
     </center>
 <p>The Management, Principal, and Faculty of Dhaanish Ahmed College of Engineering cordially invite you to join our grand Pongal Celebrations, a vibrant tribute to our rich cultural heritage and the spirit of the harvest. As the sun enters the auspicious month of Thai, we come together as one family to express our heartfelt gratitude to nature and the hardworking farming community that sustains us.
@@ -21,3 +21,4 @@ The campus will transform into a traditional village square, resonating with the
 
 </body>
 </html>
+
